--- a/app/Resources/views/snippets/heroes/statslist.html.twig
+++ b/app/Resources/views/snippets/heroes/statslist.html.twig
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div id="heroes-statslist">
-        <table id="hsl-table" class="hsl-table display table table-sm dt-responsive">
+        <table id="hsl-table" class="hsl-table hotstatus-datatable display table table-sm dt-responsive">
             <thead class=""></thead>
         </table>
     </div>
