Included chart js and created the initial template for the statmatrix for the hero page, will have to complete implementation after the initial hero page response action is complete, because it will require a secondary response to calculate total average matrix stats among all heroes

--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -37,6 +37,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="hotstatus-subcontainer">
+                                <div class="">
+                                    <a
+                                            data-toggle="collapse"
+                                            data-target="#hl-graphs-collapse"
+                                            class="heroloader-toggle d-lg-none collapsed"></a>
+                                    <span class="hl-stats-title">Graphs</span>
+                                </div>
+                                <div id="hl-graphs-collapse" class="collapse">
+                                    <div id="hl-graphs">{# HEROLOADER GENERATED #}</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -78,11 +94,6 @@
                     <div class="text-center">
                     {% block advertising_horizontal_responsive_01 %}{% endblock %}
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="dev-row-a">Graphs</div>
                 </div>
             </div>
             <div class="row">
