--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-3 col-md-3 col-lg-3 padding-sm-right-0 heroloader-container-herodata">
+        <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 padding-sm-right-0 heroloader-container-herodata">
             <div class="row">
                 <div class="col">
                     <div class="row">
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-9 col-md-9 col-lg-9 padding-sm-left-0 heroloader-container-talents">
+        <div class="col-sm-12 col-md-12 col-lg-9 col-xl-9 padding-sm-left-0 heroloader-container-talents">
             <div class="row">
                 <div class="col">
                     <div class="row">
