Added additional styling to charts, inserted more ad slots into hero page

--- a/app/Resources/views/default/hero.html.twig
+++ b/app/Resources/views/default/hero.html.twig
@@ -80,6 +80,9 @@
                     {% block advertising_horizontal_responsive_01 %}
                         {% include ':snippets:advertising/responsive_horizontal_inner.html.twig' %}
                     {% endblock %}
+                    {% block advertising_horizontal_responsive_02 %}
+                        {% include ':snippets:advertising/responsive_horizontal_inner_flex.html.twig' %}
+                    {% endblock %}
                 {% endembed %}
             </div>
             <div class="col-xl-2">
