--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -39,6 +39,11 @@
                     </div>
                     <div class="row">
                         <div class="col">
+                            {% block advertising_horizontal_responsive_02 %}{% endblock %}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
                             <div class="hotstatus-subcontainer">
                                 <div class="">
                                     <a
