--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -19,6 +19,7 @@
                             </div>
                         </div>
                     </div>
+                    <div id="hl-medals-container">{# HEROLOADER GENERATED #}</div>
                     <div class="row">
                         <div class="col">
                             <div class="hotstatus-subcontainer">
