--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -102,16 +102,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
-                    <div class="dev-row-b">Data Table Foes Matchup</div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="dev-row-a">Data Table Friends Matchup</div>
-                </div>
-            </div>
+            <div id="hl-matchups-container">{# HEROLOADER GENERATED #}</div>
         </div>
     </div>
 </div>
