--- a/app/Resources/views/snippets/navigation.html.twig
+++ b/app/Resources/views/snippets/navigation.html.twig
@@ -30,8 +30,8 @@
                 <a class="nav-link nav-stopwordwrap {{ route == 'upload' ? 'active' }}" style="margin-right: 32px;" href="{{ path('upload') }}">Upload Replay</a>
             </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0" method="get" action="#">
-            <input class="hotstatus-search-textbox" type="text" placeholder="Enter Player Name..." aria-label="Search by Player Name">
+        <form class="form-inline my-2 my-lg-0" method="post" action="{{ path('playerSearch') }}">
+            <input name="search" class="hotstatus-search-textbox" type="text" placeholder="Enter Player Name..." aria-label="Search by Player Name">
             <button id="nav-player-search-btn" class="btn my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
         </form>
     </div>
