Added additional ttl default values to hotstatus cache, created playerdata controller to mimic similar functionality of herodata controller but for player requests. Fleshed out playerAction in default controller

--- a/app/Resources/views/default/player.html.twig
+++ b/app/Resources/views/default/player.html.twig
@@ -30,7 +30,7 @@
             <div class="col-xl-2"></div>
             <div class="col-sm-12 col-md-12 col-xl-8">
                 <div class="hotstatus-container">
-
+                    {{ player|raw }}
                 </div>
             </div>
             <div class="col-xl-2">
