--- a/app/Resources/views/default/player.html.twig
+++ b/app/Resources/views/default/player.html.twig
@@ -5,7 +5,7 @@
 
 {# Append to title #}
 {% block title %}
-: Player
+: {{ player.name }}#{{ player.tag }}
 {% endblock %}
 
 {# Inject dynamic content variables #}
@@ -30,7 +30,7 @@
             <div class="col-xl-2"></div>
             <div class="col-sm-12 col-md-12 col-xl-8">
                 <div class="hotstatus-container">
-                    {{ player|raw }}
+                    {{ player|json_encode|raw }}
                 </div>
             </div>
             <div class="col-xl-2">
