Started on beginnings of playerloader js, similar to heroloader for displaying dynamic content on a player's page

--- a/app/Resources/views/default/player.html.twig
+++ b/app/Resources/views/default/player.html.twig
@@ -52,5 +52,6 @@
 
 {# Tail Javascript #}
 {% block tailJavascript %}
+    Hotstatus.advertising.internal.generateByDefault = false;
 {% endblock %}
 
