--- a/app/Resources/views/snippets/players/playerloader.html.twig
+++ b/app/Resources/views/snippets/players/playerloader.html.twig
@@ -5,7 +5,7 @@
 <div id="playerloader-container" class="initial-load container-fluid hotstatus-container">
     <div class="row">
         <div class="col">
-            {# Filter Row #}
+            {# Top Row #}
         </div>
     </div>
     <div class="row">
@@ -13,6 +13,7 @@
             <div class="row">
                 <div class="col">
                     {# Left Pane #}
+                    {% block filter %}{% endblock %}
                 </div>
             </div>
         </div>
