--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1199,3 +1199,12 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     color: #59a7ff;
     font-size: 24px;
 }
+
+/*
+ * Player Loader
+ */
+.recentmatch-simplewidget {
+    width: 100%;
+    height:80px;
+    background-color: #0088CC;
+}
