--- a/app/Resources/views/snippets/players/playerloader.html.twig
+++ b/app/Resources/views/snippets/players/playerloader.html.twig
@@ -19,11 +19,9 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-9 col-xl-9 padding-sm-left-0">
             <div class="row">
-                <div class="col">
+                <div class="col text-center">
                     {# Right Pane #}
-                    <div class="hotstatus-subcontainer">
-                        <div id="pl-recentmatches-container">{# PLAYERLOADER GENERATED #}</div>
-                    </div>
+                    <div id="pl-recentmatches-container" class="pl-recentmatches-container horizontal-scroller">{# PLAYERLOADER GENERATED #}</div>
                 </div>
             </div>
         </div>
