--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1203,8 +1203,38 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
 /*
  * Player Loader
  */
+.horizontal-scroller {
+    white-space: nowrap;
+    overflow-x: auto;
+}
+
+.pl-recentmatch-bg-won {
+    background-color: #52b8e1 !important;
+}
+
+.pl-recentmatch-bg-lost {
+    background-color: #e16968 !important;
+}
+
+.pl-recentmatch-container {
+    padding-bottom: 5px;
+}
+
+.pl-recentmatches-container {
+    background-color: rgba(46, 57, 59, 0.4);
+    border: 1px;
+    border-color: #4F495C;
+    border-style: solid;
+    border-radius: 4px;
+    padding: 7px 15px !important;
+    margin: 2px 2px !important;
+}
+
 .recentmatch-simplewidget {
-    width: 100%;
-    height:80px;
-    background-color: #0088CC;
+    width:540px;
+    height:100px;
+    border: 1px;
+    border-style: solid;
+    border-color: #1B0748;
+    margin: 0 auto;
 }
