Added gameType filter to player page that affects both the player request as well as recent matches

--- a/app/Resources/views/default/player.html.twig
+++ b/app/Resources/views/default/player.html.twig
@@ -36,6 +36,7 @@
                     {% block filter %}
                         <div>
                             {% include ':snippets:heroes/filter/dropdown/select/seasons.html.twig' %}
+                            {% include ':snippets:heroes/filter/dropdown/multiselect/gameTypes.html.twig' %}
                         </div>
                     {% endblock %}
                 {% endembed %}
