Added additional ui images, filled out player recent matches response data

--- a/app/Resources/views/default/player.html.twig
+++ b/app/Resources/views/default/player.html.twig
@@ -12,6 +12,7 @@
 {# Inject dynamic content variables #}
 {% block dynamicVariables %}
     let player_id = {{ player.id }};
+    let image_bpath = "{{ asset('', 'images')|raw }}";
 {% endblock %}
 
 {# Custom styling that require the use of path generation #}
