--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1259,7 +1259,7 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     width:540px;
     height:80px;
     margin: 0 auto;
-    color: rgba(255, 255, 255, 0.65);
+    color: #FFFFFF;
     background-color: #384143 !important;
     border: 2px;
     border-style: solid;
@@ -1268,6 +1268,8 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
 
 .recentmatch-simplewidget-leftpane {
     /*background-color: #162C7E*/;
+    background-repeat: no-repeat;
+    background-size: 100%;
     position: absolute;
     left:0px;
     top:0px;
@@ -1286,13 +1288,15 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     font-weight: bold;
     cursor: default;
     color: #FFFFFF;
+    text-shadow: -1px 0 #000000,0 1px #000000,1px 0 #000000,0 -1px #000000;
 }
 
 .rm-sw-lp-date {
     position: relative;
     margin: 0 -100%;
     font-size: 10px;
-    font-weight: normal;
+    font-weight: 600;
+    text-shadow: -1px 0 #000000,0 1px #000000,1px 0 #000000,0 -1px #000000;
 }
 
 .rm-sw-lp-date-text {
@@ -1305,6 +1309,7 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     font-size: 20px;
     font-weight: bold;
     cursor: default;
+    text-shadow: -1px 0 #000000,0 1px #000000,1px 0 #000000,0 -1px #000000;
 }
 
 .rm-sw-lp-matchlength {
@@ -1313,6 +1318,7 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     font-size: 11px;
     font-weight: normal;
     cursor: default;
+    text-shadow: -1px 0 #000000,0 1px #000000,1px 0 #000000,0 -1px #000000;
 }
 
 .recentmatch-simplewidget-heropane {
